script_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: script
spec:
  replicas: 1
  selector:
    matchLabels:
      app: script
  template:
    metadata:
      labels:
        app: script
    spec:
      containers:
      - name: script
        image: #TODO <add docker image name>
